--- a/LimenawebApp/Views/Shared/New_design/Head.cshtml
+++ b/LimenawebApp/Views/Shared/New_design/Head.cshtml
@@ -48,3 +48,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css">
 
 }
+
+
+@if (ViewBag.Title == "Distribuidora Limeña - New Purchase Data" || ViewBag.Title == "Distribuidora Limeña - Edit Purchase Data")
+{
+    <link rel="stylesheet" href="~/Content/appcontent/assets/css/fixedColumns.dataTables.css">
+    <link rel="stylesheet" href="~/Content/appcontent/assets/vendor/contextmeu/jquery.contextMenu.css">
+
+}
