--- a/LimenawebApp/Views/Main/Dashboard.cshtml
+++ b/LimenawebApp/Views/Main/Dashboard.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Dashboard";
     Layout = "~/Views/Shared/_LayoutMain.cshtml";
+    LimenawebApp.Models.Sys_Users activeuser = (LimenawebApp.Models.Sys_Users)ViewBag.activeuser;
 }
 
 
@@ -35,6 +36,65 @@
         <i class="material-icons mr-3">error_outline</i>
         <div class="text-body"><strong>API gateways are now Offline.</strong> Please try the API later. If you want to stay up to date check our <a href="#">Status Page </a></div>
     </div>
+
+    @if (!activeuser.Roles.Contains("Purchases"))
+    {
+        <p class="text-dark-gray d-flex align-items-center mt-3">
+            <strong>Finance</strong><hr />
+        </p>
+
+        <div class="row card-group-row  pt-2">
+            <div class="col-md-3">
+                <div class="card card-group-row__card pricing__card">
+                    <div class="card-body d-flex flex-column">
+                        <div class="text-center">
+                            <img src="~/Content/assets/images/dashboard/authorizations.jpg" style="width:89px;" />
+
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <a href="@Url.Action("Authorizations","Finance")" class="btn btn-success mt-auto">Driver's Authorizations</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card card-group-row__card pricing__card">
+                    <div class="card-body d-flex flex-column">
+                        <div class="text-center">
+                            <img src="~/Content/assets/images/dashboard/paymentfinance.jpg" style="width:100px;" />
+
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <a href="@Url.Action("ReceivePayment","Finance")" class="btn btn-success mt-auto">Receive Payments</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <p class="text-dark-gray d-flex align-items-center mt-3">
+            <strong>Warehouse</strong><hr />
+        </p>
+
+        <div class="row card-group-row  pt-2">
+            <div class="col-md-4 col-lg-3">
+                <div class="card card-group-row__card pricing__card">
+                    <div class="card-body d-flex flex-column">
+                        <div class="text-center">
+                            <img src="~/Content/assets/images/dashboard/authorizations.jpg" style="width:89px;" />
+
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <a href="@Url.Action("ReceiveCredits","Warehouse")" class="btn btn-success mt-auto">Receive Credits</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    }
 
 
     @*<p class="text-dark-gray d-flex align-items-center mt-3">
@@ -98,38 +158,7 @@
             </div>
         </div>*@
 
-    <p class="text-dark-gray d-flex align-items-center mt-3">
-        <strong>Finance</strong><hr />
-    </p>
 
-    <div class="row card-group-row  pt-2">
-        <div class="col-md-3">
-            <div class="card card-group-row__card pricing__card">
-                <div class="card-body d-flex flex-column">
-                    <div class="text-center">
-                        <img src="~/Content/assets/images/dashboard/authorizations.jpg" style="width:89px;" />
-
-                    </div>
-                    <div class="card-body d-flex flex-column">
-                        <a href="@Url.Action("Authorizations","Finance")" class="btn btn-success mt-auto">Driver's Authorizations</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card card-group-row__card pricing__card">
-                <div class="card-body d-flex flex-column">
-                    <div class="text-center">
-                        <img src="~/Content/assets/images/dashboard/paymentfinance.jpg" style="width:100px;" />
-
-                    </div>
-                    <div class="card-body d-flex flex-column">
-                        <a href="@Url.Action("ReceivePayment","Finance")" class="btn btn-success mt-auto">Receive Payments</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     @*<p class="text-dark-gray d-flex align-items-center mt-3">
             <strong>Operations</strong><hr />
@@ -178,59 +207,58 @@
         </div>*@
 
 
-    <p class="text-dark-gray d-flex align-items-center mt-3">
-        <strong>Warehouse</strong><hr />
-    </p>
 
-    <div class="row card-group-row  pt-2">
-        <div class="col-md-4 col-lg-3">
-            <div class="card card-group-row__card pricing__card">
-                <div class="card-body d-flex flex-column">
-                    <div class="text-center">
-                        <img src="~/Content/assets/images/dashboard/authorizations.jpg" style="width:89px;" />
+    @if (activeuser.Roles.Contains("Purchases"))
+    {
 
-                    </div>
+        <p class="text-dark-gray d-flex align-items-center mt-3">
+            <strong>Purchases</strong><hr />
+        </p>
+
+        <div class="row card-group-row  pt-2">
+            <div class="col-md-3">
+                <div class="card card-group-row__card pricing__card">
                     <div class="card-body d-flex flex-column">
-                        <a href="@Url.Action("ReceiveCredits","Warehouse")" class="btn btn-success mt-auto">Receive Credits</a>
+                        <div class="text-center">
+                            <img src="~/Content/assets/images/dashboard/authorizations.jpg" style="width:100px;" />
+
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <a href="@Url.Action("OTB","OTB")" class="btn btn-success mt-auto">OTB</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card card-group-row__card pricing__card">
+                    <div class="card-body d-flex flex-column">
+                        <div class="text-center">
+                            <img src="~/Content/assets/images/dashboard/authorizations.jpg" style="width:100px;" />
+
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <a href="@Url.Action("SOP","SOP")" class="btn btn-success mt-auto">S&OP</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card card-group-row__card pricing__card">
+                    <div class="card-body d-flex flex-column">
+                        <div class="text-center">
+                            <img src="~/Content/appcontent/assets/img/badge/logoIBM-Cognos-Analytics.png" style="width:111px;" />
+
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <a href="http://cognos.limenainc.net/" target="_blank" class="btn btn-success mt-auto">COGNOS</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
-    </div>
+    }
 
-    <p class="text-dark-gray d-flex align-items-center mt-3">
-        <strong>Purchases</strong><hr />
-    </p>
-
-    <div class="row card-group-row  pt-2">
-        <div class="col-md-3">
-            <div class="card card-group-row__card pricing__card">
-                <div class="card-body d-flex flex-column">
-                    <div class="text-center">
-                        <img src="~/Content/assets/images/dashboard/authorizations.jpg" style="width:100px;" />
-
-                    </div>
-                    <div class="card-body d-flex flex-column">
-                        <a href="@Url.Action("OTB","OTB")" class="btn btn-success mt-auto">OTB</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-  
-        <div class="col-md-3">
-            <div class="card card-group-row__card pricing__card">
-                <div class="card-body d-flex flex-column">
-                    <div class="text-center">
-                        <img src="~/Content/assets/images/dashboard/authorizations.jpg" style="width:100px;" />
-
-                    </div>
-                    <div class="card-body d-flex flex-column">
-                        <a href="@Url.Action("SOP","SOP")" class="btn btn-success mt-auto">S&OP</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
 </div>
