--- a/LimenawebApp/Views/Shared/New_design/Header.cshtml
+++ b/LimenawebApp/Views/Shared/New_design/Header.cshtml
@@ -20,7 +20,7 @@
 
                 </a>
                 <ul class="nav navbar-nav ml-auto d-none d-md-flex">
-                    <li class="nav-item">
+                    @*<li class="nav-item">
                         <a href="" class="nav-link">
                             <i class="material-icons">help_outline</i> Get Help
                         </a>
@@ -35,147 +35,21 @@
                                 <a href="javascript:void(0)" class="text-muted"><small>Clear all</small></a>
                             </div>
                             <div class="navbar-notifications-menu__content" data-simplebar>
-                                <div class="py-2">
-                                    <div class="dropdown-item d-flex">
-                                        <div class="mr-3">
-                                            <div class="avatar avatar-sm" style="width: 32px; height: 32px;">
-                                                <img src="~/Content/assets/images/256_daniel-gaffey-1060698-unsplash.jpg" alt="Avatar" class="avatar-img rounded-circle">
-                                            </div>
-                                        </div>
-                                        <div class="flex">
-                                            <a href="">A.Demian</a> left a comment on <a href="">Stack</a><br>
-                                            <small class="text-muted">1 minute ago</small>
-                                        </div>
-                                    </div>
-                                    <div class="dropdown-item d-flex">
-                                        <div class="mr-3">
-                                            <a href="#">
-                                                <div class="avatar avatar-xs" style="width: 32px; height: 32px;">
-                                                    <span class="avatar-title bg-purple rounded-circle"><i class="material-icons icon-16pt">person_add</i></span>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="flex">
-                                            New user <a href="#">Peter Parker</a> signed up.<br>
-                                            <small class="text-muted">1 hour ago</small>
-                                        </div>
-                                    </div>
-                                    <div class="dropdown-item d-flex">
-                                        <div class="mr-3">
-                                            <a href="#">
-                                                <div class="avatar avatar-xs" style="width: 32px; height: 32px;">
-                                                    <span class="avatar-title rounded-circle">JD</span>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="flex">
-                                            <a href="#">Big Joe</a> <small class="text-muted">wrote:</small><br>
-                                            <div>Hey, how are you? What about our next meeting</div>
-                                            <small class="text-muted">2 minutes ago</small>
-                                        </div>
-                                    </div>
-                                    <div class="dropdown-item d-flex">
-                                        <div class="mr-3">
-                                            <div class="avatar avatar-sm" style="width: 32px; height: 32px;">
-                                                <img src="~/Content/assets/images/256_daniel-gaffey-1060698-unsplash.jpg" alt="Avatar" class="avatar-img rounded-circle">
-                                            </div>
-                                        </div>
-                                        <div class="flex">
-                                            <a href="">A.Demian</a> left a comment on <a href="">Stack</a><br>
-                                            <small class="text-muted">1 minute ago</small>
-                                        </div>
-                                    </div>
-                                    <div class="dropdown-item d-flex">
-                                        <div class="mr-3">
-                                            <a href="#">
-                                                <div class="avatar avatar-xs" style="width: 32px; height: 32px;">
-                                                    <span class="avatar-title bg-purple rounded-circle"><i class="material-icons icon-16pt">person_add</i></span>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="flex">
-                                            New user <a href="#">Peter Parker</a> signed up.<br>
-                                            <small class="text-muted">1 hour ago</small>
-                                        </div>
-                                    </div>
-                                    <div class="dropdown-item d-flex">
-                                        <div class="mr-3">
-                                            <a href="#">
-                                                <div class="avatar avatar-xs" style="width: 32px; height: 32px;">
-                                                    <span class="avatar-title rounded-circle">JD</span>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="flex">
-                                            <a href="#">Big Joe</a> <small class="text-muted">wrote:</small><br>
-                                            <div>Hey, how are you? What about our next meeting</div>
-                                            <small class="text-muted">2 minutes ago</small>
-                                        </div>
-                                    </div>
-                                    <div class="dropdown-item d-flex">
-                                        <div class="mr-3">
-                                            <div class="avatar avatar-sm" style="width: 32px; height: 32px;">
-                                                <img src="~/Content/assets/images/256_daniel-gaffey-1060698-unsplash.jpg" alt="Avatar" class="avatar-img rounded-circle">
-                                            </div>
-                                        </div>
-                                        <div class="flex">
-                                            <a href="">A.Demian</a> left a comment on <a href="">Stack</a><br>
-                                            <small class="text-muted">1 minute ago</small>
-                                        </div>
-                                    </div>
-                                    <div class="dropdown-item d-flex">
-                                        <div class="mr-3">
-                                            <a href="#">
-                                                <div class="avatar avatar-xs" style="width: 32px; height: 32px;">
-                                                    <span class="avatar-title bg-purple rounded-circle"><i class="material-icons icon-16pt">person_add</i></span>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="flex">
-                                            New user <a href="#">Peter Parker</a> signed up.<br>
-                                            <small class="text-muted">1 hour ago</small>
-                                        </div>
-                                    </div>
-                                    <div class="dropdown-item d-flex">
-                                        <div class="mr-3">
-                                            <a href="#">
-                                                <div class="avatar avatar-xs" style="width: 32px; height: 32px;">
-                                                    <span class="avatar-title rounded-circle">JD</span>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="flex">
-                                            <a href="#">Big Joe</a> <small class="text-muted">wrote:</small><br>
-                                            <div>Hey, how are you? What about our next meeting</div>
-                                            <small class="text-muted">2 minutes ago</small>
-                                        </div>
-                                    </div>
-                                </div>
+      
                             </div>
                             <a href="javascript:void(0);" class="dropdown-item text-center navbar-notifications-menu__footer">View All</a>
                         </div>
-                    </li>
+                    </li>*@
                 </ul>
                 <ul class="nav navbar-nav d-none d-sm-flex border-left navbar-height align-items-center">
                     <li class="nav-item dropdown">
                         <a href="#account_menu" class="nav-link dropdown-toggle" data-toggle="dropdown" data-caret="false">
-                            <img src="~/Content/assets/images/avatar/demi.png" class="rounded-circle" width="32" alt="Frontted">
+                            <img src="~/Content/assets/images/fondolimena1.jpg" class="rounded-circle" width="32" alt="Frontted">
                             <span class="ml-1 d-flex-inline">
                                 <span class="text-light">@user.Name  @user.Lastname.Substring(0,1).</span>
                             </span>
                         </a>
-                        <div id="account_menu" class="dropdown-menu dropdown-menu-right">
-                            <div class="dropdown-item-text dropdown-item-text--lh">
-                                <div><strong>@user.Name @user.Lastname</strong></div>
-                                <div>@user.Roles</div>
-                            </div>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item active" href="fluid-dashboard.html">Dashboard</a>
-                            <a class="dropdown-item" href="fluid-profile.html">My profile</a>
-                            <a class="dropdown-item" href="fluid-edit-account.html">Edit account</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="fluid-login.html">Logout</a>
-                        </div>
+
                     </li>
                 </ul>
             </div>
