--- a/LimenawebApp/Views/Shared/_Layout.cshtml
+++ b/LimenawebApp/Views/Shared/_Layout.cshtml
@@ -5747,13 +5747,18 @@ Configure tooltips globally
             placeholder: "Select...",
             data: data,
                 templateResult: function (data) {
-                    if (data.status == 1) {
-                        return $('<span style="color:green">' + data.text + '<span>');
-                    } else if (data.status == 0) {
-                        return $('<span>' + data.text + '<span>');
-                    } else if (data.status == 2) {
-                        return $('<span style="color:red">' + data.text + '<span>');
+                    if (data.printed = 'N') {
+                        if (data.status == 1) {
+                            return $('<span style="color:green">' + data.text + '<span>');
+                        } else if (data.status == 0) {
+                            return $('<span>' + data.text + '<span>');
+                        } else if (data.status == 2) {
+                            return $('<span style="color:red">' + data.text + '<span>');
+                        }
+                    } else {
+                        return $('<span style="color:red">' + data.text + ' (PRINTED)<span>');
                     }
+
 
                 }
             });
